--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               >
             </h4>
             <p class="my-work-experiance-period">
-              October 2018 - July 2020
+              master of law - July 2020
             </p>
             <ul class="my-work-experiance-duties">
               <li>
@@ -280,34 +280,11 @@
                 Ability to quickly find a way out of
                 a difficult situation.
               </li>
-            </ul>
-          </div>
-
-          <!-- company 1 -->
-          <div class="my-work-experiance-company-block">
-            <h4 class="projects-item">
-              Police officer
-              <span
-                class="my-work-experiance-section"
-                >National Police of Ukraine</span
-              >
-            </h4>
-            <p class="my-work-experiance-period">
-              August 2013 - October 2018
-            </p>
-            <ul class="my-work-experiance-duties">
               <li>
                 Attention to detail.
               </li>
-              <li>
-                Making informed decisions.
-              </li>
-              <li>
-                Compliance with established rules.
-              </li>
             </ul>
           </div>
-
           <!-- my education section -->
           <div>
             <p class="main-contact-title">
