add about projets

--- a/index.html
+++ b/index.html
@@ -202,7 +202,11 @@
                   Team project about searching movies and adding favorite
                   movies to a client personal library. Using pure JS,
                   npm-packages and SCSS. User registration implemented
-                  with Firebase. My role in the project is teamlead.
+                  with Firebase. As a teamlead, I was involved in the 
+                  organization of work in general, the division of tasks,
+                  the logic of project work, styles, and the implementation
+                  of the tasks of individual participants in the project,
+                  and the resolution of conflicts in Github, etc..
                 </p>
                 </span>
             </li>
@@ -221,7 +225,9 @@
                 <p class="my-projecs-brecket">
                   Team project about ice cream company site filled with tasty
                   visual effects using JavaScript and SCSS. My role in the
-                  project is teamlead.
+                  project is teamlead. It was my first experience as a teamleader,
+                  which taught me the organization of team work and the specifics
+                  of collective work through GitHub.
                 </p>
                 </span>
             </li>
